May 14 2004  devel  Fixed segfault issue with too-large packets inside 
                     pcapsource.  As far as I can tell this can only be 
                     generated by a flawed driver so it shouldn't be a 
                     security issue.  Root is dropped for pcapfiles so this
                     should be safe from that angle, too.
May 13 2004  devel  See, I haven't abandoned you all, just been really busy
                    Kluged out compile errors on some vendor-modified kernels
                     that include ethtool.h in wireless.h
                    Updated config file version and took out defunct examples
                    Fixed the rest of the compile errors on some kernels, 
                     with luck
Apr 22 2004  devel  Fixed initial-channel -I arg for single named sources
Apr 10 2004  devel  New devel cycle
Apr 07 2004 2004-04 Released 2004-04R1.
                    Major improvements in this release:
                      Fixed 'Too many open files' errors on all platforms
                      Tweaked autoconf scripts to make some distros happier 
                       with finding components
                      Additional FreeBSD support and compile-time fixes
                      Better error reporting for most fatal conditions
                      Fixed echoing to console fatal error conditions before 
                       the client connects
                      Support for latest Ethereal wtaplibs
                      Support for ADMTek cards
                      Fixed support for ACX100 cards
                      Fixed support for prism2_legacy (please, upgrade 
                       and stop using this)
                      Fixed pcap on platforms like OSX, should compile 
                       cleanly out of the box
                      Fixed segfaults with empty *_manuf files
                      Added support for dumpfiles greater than 2GB