@@ -1,3 +1,5 @@
+May 15 2004  devel  Added support for ipw2100 (Centrino) cards using the latest
+                     drivers from sourceforge.
 May 14 2004  devel  Fixed segfault issue with too-large packets inside 
                      pcapsource.  As far as I can tell this can only be 
                      generated by a flawed driver so it shouldn't be a 
